# overzicht_begeleiding_bachelorproeven

./: .env.example  README.md  opvolging_ddl.sql  pyproject.toml  requirements.txt  run.py  setup.cfg
app/: py.typed
app/cli/: main.py
app/config/: __init__.py
app/db/: session.py
app/models/: models.py
app/repository/: repository.py
