[metadata]
name = overzicht_begeleiding_bachelorproeven
version = 0.1.0
description = Eenvoudige CLI-applicatie om opvolgingen en contacten van bachelorproeven te beheren en te bekijken.
long_description = file: README.md
long_description_content_type = text/markdown
author = Auteur
author_email = you@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Software Development :: Libraries

[options]
# Find packages under the 'app' directory
packages = find:
package_dir =
    = app
include_package_data = True
zip_safe = False

# Minimal runtime dependencies (keep in sync with pyproject/requirements.txt)
install_requires =
    SQLAlchemy>=1.4,<3.0
    python-dotenv>=0.21.0
    rich>=13.0.0

python_requires = >=3.10

[options.packages.find]
where = app
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    overzicht = app.cli.main:main